# narratelm

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  flake.nix  install.sh  justfile  narratelm.py  pyproject.toml  requirements.txt  setup.py
src/narratelm/: __init__.py  audio.py  bookjson.py  chunking.py  classify.py  cli.py  config.py  epub.py  extract.py  naming.py  pipeline.py  probe.py  qa.py  textnorm.py  voices.py
src/narratelm/data/voices/: voices.json
src/narratelm/tts/: base.py  devices.py  fake.py  vibevoice.py
tests/: conftest.py  test_audio.py  test_chunking.py  test_classify.py  test_epub.py  test_extract.py  test_naming.py  test_pipeline.py  test_textnorm.py
